@@ -1,3 +1,4 @@
 DIST django-bootstrap3-4.11.0.tar.gz 32605 SHA256 4cd090df8a8a9f11d598b8579d83be478783cf2c970bf4c8b1c6fcc4d0436b2e SHA512 98e1a81e74dfcf4d9cc28268c6473b660b7cccbee23e00ca4d6adcb4d971236e15e71cb0d7ef3a7c57a800164a43f07d0539ec733b0adb59d70509a21b8f03b9 WHIRLPOOL c61304df37a11011a02f569b11fefcd425cef66bff217895ed3bfae81c732a7ba8fb1781570ae7fab727de130bbcb06aa133e5bb99d806c6e21c03ffd0d7fdac
 DIST django-bootstrap3-4.7.0.tar.gz 30990 SHA256 e8f0924b491cf33f0b5142d7af238da5b4b6ab7b2c28a5e8e0e6e114625e07a2 SHA512 6b4eba20acd745aa8a5155d669aedd0a4316b9bc247f6c7badac7595b5794172e07419dbae59bc6823f4886abbc920cbc4355b8f4e1e1e96df7130ea4ba2454f WHIRLPOOL d99dcd195ff4402c37722b02537ed0b33efb9e2d07e8e0c302d62d9e95741c1f434ad63024c74e36312a8993a67646d0e95ddb8f2e7a2871ed6a0552d5031cdb
 DIST django-bootstrap3-5.0.2.tar.gz 33062 SHA256 caee6a052e44c8fd9bda14b0f5e80310c954d27ff3695d4d8c9af94f25fdc9d3 SHA512 1e1527ba505c89e8694d264286cdbe154764185ce03adfd35b81a8e12ea7113a69863a7d38ac97c93bb3d57a8e32fe6da80ef579f5d0f2a1b77c5169dec73591 WHIRLPOOL 455d47c577b99b2890ebcd3b9ada47dd1c738c73294bcba44248b3d150d6e33d7e522587fdcf68a6aedbeb168d6fb87027f7a2065ae40e374e55982ea09eb635
+DIST django-bootstrap3-5.1.1.tar.gz 33525 SHA256 28eac3126d7d582d574d646e248574792ba0ac2c586a745c674ab29ed27debcb SHA512 54a8ff005a5567ed2206748039fee33f72140b7fe86b95e3de4c15ffc4b30ee63c680fe7734e342f903a81c091d227f65b0ab7478a0df83d1d8b175d97dbb6c3 WHIRLPOOL bdcfce0613741593dff801a9760d0dcfeea7a666b8ef744a86fa327e56a5d371a904590903776ff9e982a9a984a004a39cb750774269199d8b51bb090f792085
