@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>johann@j-schmitz.net</email>
-		<name>Johann Schmitz (ercpe)</name>
-	</maintainer>
+  <maintainer>
+    <email>johann@j-schmitz.net</email>
+    <name>Johann Schmitz (ercpe)</name>
+  </maintainer>
 </pkgmetadata>
-
