@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/django-bootstrap3
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*django-bootstrap3-5.1.1 (18 Feb 2015)
+
+  18 Feb 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-5.1.1.ebuild,
+  metadata.xml:
+  dev-python/django-bootstrap3: Version Bump
 
 *django-bootstrap3-5.0.2 (29 Nov 2014)
 
